--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,7 @@ spring.jpa.hibernate.ddl-auto:update
 spring.jpa.show-sql = true
 # Enabling H2 Console
 spring.h2.console.enabled=true
-
-
+spring.h2.console.settings.web-allow-others=true
 
 
 #spring.datasource.password:admin
